[project]
name = "medical-paper-summarizer"
version = "0.1.0"
description = "Medical paper summarizer demo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "numpy",
    "torch>=2.9.1",
    "transformers>=5.2.0",
    "requests>=2.32.5",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "tiktoken>=0.12.0",
    "langchain-text-splitters>=1.1.1",
    "fastapi>=0.134.0",
    "uvicorn>=0.41.0",
]

